# backend/docs/swagger.json
@@ -4390,7 +4390,7 @@
                         "name": "request",
                         "in": "body",
                         "schema": {
-                            "$ref": "#/definitions/cap.challengeRequest"
+                            "$ref": "#/definitions/auth.challengeRequest"
                         }
                     }
                 ],
@@ -4406,7 +4406,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/cap.ChallengeResponse"
+                                            "$ref": "#/definitions/auth.ChallengeResponse"
                                         }
                                     }
                                 }
@@ -4439,7 +4439,7 @@
                         "name": "request",
                         "in": "body",
                         "schema": {
-                            "$ref": "#/definitions/cap.challengeRequest"
+                            "$ref": "#/definitions/auth.challengeRequest"
                         }
                     }
                 ],
@@ -4455,7 +4455,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/cap.ChallengeResponse"
+                                            "$ref": "#/definitions/auth.ChallengeResponse"
                                         }
                                     }
                                 }
@@ -4491,7 +4491,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/cap.redeemRequest"
+                            "$ref": "#/definitions/auth.redeemRequest"
                         }
                     }
                 ],
@@ -4507,7 +4507,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/cap.RedeemResponse"
+                                            "$ref": "#/definitions/auth.RedeemResponse"
                                         }
                                     }
                                 }
@@ -6127,26 +6127,7 @@
                 }
             }
         },
-        "auth.OAuthAuthorizeResponse": {
-            "type": "object",
-            "properties": {
-                "authorize_url": {
-                    "type": "string"
-                }
-            }
-        },
-        "auth.OAuthCallbackResult": {
-            "type": "object",
-            "properties": {
-                "status": {
-                    "type": "string"
-                },
-                "user": {
-                    "$ref": "#/definitions/auth.BasicUserInfo"
-                }
-            }
-        },
-        "cap.ChallengeResponse": {
+        "auth.ChallengeResponse": {
             "type": "object",
             "properties": {
                 "challenge": {
@@ -6172,7 +6153,26 @@
                 }
             }
         },
-        "cap.RedeemResponse": {
+        "auth.OAuthAuthorizeResponse": {
+            "type": "object",
+            "properties": {
+                "authorize_url": {
+                    "type": "string"
+                }
+            }
+        },
+        "auth.OAuthCallbackResult": {
+            "type": "object",
+            "properties": {
+                "status": {
+                    "type": "string"
+                },
+                "user": {
+                    "$ref": "#/definitions/auth.BasicUserInfo"
+                }
+            }
+        },
+        "auth.RedeemResponse": {
             "type": "object",
             "properties": {
                 "error": {
@@ -6189,7 +6189,7 @@
                 }
             }
         },
-        "cap.challengeRequest": {
+        "auth.challengeRequest": {
             "type": "object",
             "properties": {
                 "scope": {
@@ -6197,7 +6197,7 @@
                 }
             }
         },
-        "cap.redeemRequest": {
+        "auth.redeemRequest": {
             "type": "object",
             "required": [
                 "solutions",
